@@ -2,6 +2,8 @@
 
 	* src/anytime.cpp (convertToTime): Warn if NA values resulting from
 	conversion to character (and only one warning will be give)
+	* R/anytime.R: Updated docs
+	* man/anytime.Rd: Idem
 
 2023-09-09  Dirk Eddelbuettel  <edd@debian.org>
 
